--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@types/crypto-js": "^4.2.2",
         "@types/firefox": "^0.0.34",
         "@types/firefox-webext-browser": "^120.0.3",
+        "@types/lodash": "^4.17.20",
         "@types/pako": "^2.0.4",
         "@types/slug": "^5.0.9",
         "@types/toastify-js": "^1.12.3",
@@ -48,6 +49,7 @@
         "crypto-js": "^4.2.0",
         "emoji-picker-element": "^1.26.3",
         "emoji-regex": "^10.4.0",
+        "lodash": "^4.17.21",
         "moment": "^2.30.1",
         "npm": "^11.6.2",
         "pako": "^2.1.0",
