--- a/compose.yml
+++ b/compose.yml
@@ -4,10 +4,8 @@ services:
     app:
         image: tab-guardian
         container_name: tab-guardian
-        build:
-            context: .
-            dockerfile: Containerfile
+        build: .
         volumes:
-            - .:/app:z
+            - .:/app:Z
         ports:
             - 3000:5173
